# TclArgv

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README  aclocal.m4  config.h.cmake  config.h.in  configure.ac
libltdl/: aclocal.m4
src/: CMakeLists.txt  Makefile.am  tclArgv.c  tclArgv.h  tclCppArgs.cpp  tclCppArgs.h
src/MVTHCORE/: Makefile.am  find_plugins.c  find_plugins.h  generic_contexts.c  generic_contexts.h  generic_contexts_types.h  mvthCore.c  mvth_init.c  pkgIndex.tcl  scan_for_plugins.tcl  tclArgv.c  version.c  version.h
src/include/: Makefile.am  mvthCore.h  mvthPlugin.h
src/memutils/: Makefile.am  memUtils.c  memUtils.h
src/servers/: Makefile.am  core_commands.c  core_commands.h  docmd.tcl  help_cmd.tcl  ls_cmd.tcl  mvth_main_loop.tcl  mvth_unix.c  plugins_cmd.c  set_cmd.tcl  test_unix_server.c
